<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.notesFragments.EditFragment">

    <EditText
        android:id="@+id/titleTextEditFr"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginTop="@dimen/vertical_large_margin"
        android:layout_marginEnd="@dimen/horizontal_margin"
        android:background="@color/back"
        android:hint="@string/title"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/colorPrimary"
        android:textSize="@dimen/large_text"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <com.skydoves.powerspinner.PowerSpinnerView
        android:id="@+id/spinnerCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/titleTextEditFr"
        android:textSize="@dimen/normalText"
        android:textStyle="bold"
        android:gravity="start"
        android:textColorHint="@color/colorPrimary"
        android:hint="@string/category"
        app:spinner_item_array="@array/categoryInNotesEdit"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginEnd="@dimen/horizontal_margin"
        android:padding="@dimen/app_padding"
        app:spinner_popup_animation="bounce"
        app:spinner_popup_background="@color/back"
        app:spinner_popup_elevation="4dp"
        app:spinner_arrow_gravity="end"
        app:spinner_arrow_padding="8dp"
        app:spinner_divider_color="@color/colorPrimary"
        app:spinner_divider_show="true"
        app:spinner_divider_size="0.5dp"/>

    <TextView
        android:id="@+id/dataText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginTop="@dimen/vertical_margin"
        android:layout_marginEnd="@dimen/horizontal_margin"
        android:text="@string/data_err"
        android:textAlignment="center"
        android:textColor="@color/whitish"
        android:textSize="@dimen/normalText"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/spinnerCategory" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginTop="@dimen/vertical_margin"
        android:layout_marginEnd="@dimen/horizontal_margin"
        android:layout_marginBottom="@dimen/vertical_large_margin"
        android:background="@color/back"
        android:gravity="clip_horizontal"
        android:hint="@string/notes"
        android:padding="@dimen/app_padding"
        android:textColor="@color/white"
        android:textColorHint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dataText" />

    <ImageView
        android:id="@+id/buttonSave"
        android:layout_width="@dimen/edit_image_width"
        android:layout_height="@dimen/edit_image_height"
        android:src="@drawable/ic_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginBottom="@dimen/vertical_large_margin"/>

</androidx.constraintlayout.widget.ConstraintLayout>
